Changes: 1. Fixed the page language 2. Fixed the input type for the phone

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 	<head>
 		<meta charset="UTF-8">
 		<title>Document</title>
@@ -56,7 +56,7 @@
 						<h3 class="phone-menu__title-text">Заказать звонок</h3>
 					</div>
 					<form action="/" method="POST" class="form">
-						<input type="phone" class="form__input" name="phone" placeholder="Телефон">
+						<input type="tel" class="form__input" name="phone" placeholder="Телефон">
 						<p class="form__text">
 							Нажимая "отправить", вы даете согласие на <a href="/" class="form__href" target="_blank">обработку персональных данных</a>
 							и соглашаетесь с нашей <a href="/" class="form__href" target="_blank">политикой конфиденциальности</a>.
