fix type=tel for input

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					</div>
 					<form action="/" method="POST" class="form">
 						<input type="text" class="form__input" name="name" placeholder="Имя">
-						<input type="phone" class="form__input" name="phone" placeholder="Телефон">
+						<input type="tel" class="form__input" name="phone" placeholder="Телефон">
 						<input type="email" class="form__input" name="email" placeholder="Электронная почта">
 						<textarea name="message" class="form__textarea" cols="30" rows="10" placeholder="Сообщение"></textarea>
 						<p class="form__text">
